[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyphotwrappers
description = Python wrappers for (mostly astromatic) photometry tools
author = Erik Tollerud
author_email = erik.tollerud@gmail.com
license = BSD
edit_on_github = True
github_project = eteq/pyphotwrappers

[entry_points]
astropy-package-template-example = packagename.example_mod:main